---
source: crates/kirin-derive-core/src/builder/mod.rs
expression: generate(&input)
---
impl<T: CompileTimeValue + Typeof<L>, L: TypeLattice> MultiResult<T, L> {
    pub fn new<Lang: Language + From<MultiResult<T, L>>>(
        context: &mut ::kirin::ir::Context<Lang>,
        value: impl Into<T>,
    ) -> MultiResultNewRef
    where
        Lang::TypeLattice: From<L>,
    {
        let multiresult_statement_id = context.new_statement_id();
        let value = value.into();
        let marker = std::marker::PhantomData;
        let result1: ::kirin::ir::ResultValue = context
            .ssa()
            .kind(SSAKind::Result(multiresult_statement_id, 0usize))
            .ty(Lang::TypeLattice::from(value.type_of()))
            .new()
            .into();
        let result2: ::kirin::ir::ResultValue = context
            .ssa()
            .kind(SSAKind::Result(multiresult_statement_id, 1usize))
            .ty(Lang::TypeLattice::from(value.type_of()))
            .new()
            .into();
        let multiresult_statement = context
            .statement()
            .definition(Self {
                value,
                result1,
                result2,
                marker,
            })
            .new();
        MultiResultNewRef {
            id: multiresult_statement_id,
            result1,
            result2,
        }
    }
}
pub struct MultiResultNewRef {
    pub id: ::kirin::ir::StatementId,
    pub result1: ::kirin::ir::ResultValue,
    pub result2: ::kirin::ir::ResultValue,
}
impl From<MultiResultNewRef> for ::kirin::ir::StatementId {
    fn from(value: MultiResultNewRef) -> Self {
        value.id
    }
}
